--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <div class="list">
           <div class="item">
-            <img src="daily1.png"/>
+            <img src="images/daily1.png"/>
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
@@ -100,7 +100,7 @@
           </div>
 
           <div class="item">
-            <img src="daily2.png" />
+            <img src="images/daily2.png" />
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
@@ -109,7 +109,7 @@
           </div>
 
           <div class="item">
-            <img src="daily3.png" />
+            <img src="images/daily2.png" />
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
@@ -118,7 +118,7 @@
           </div>
 
           <div class="item">
-            <img src="daily5.png" />
+            <img src="images/daily3.png" />
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
@@ -127,7 +127,7 @@
           </div>
 
           <div class="item">
-            <img src="daily6.png" />
+            <img src="images/daily5.png" />
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
@@ -141,7 +141,7 @@
         <h2>Recommended for Today</h2>
         <div class="list">
           <div class="item">
-            <img src="esctasy.png" />
+            <img src="images/esctasy.png" />
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
@@ -150,7 +150,7 @@
           </div>
 
           <div class="item">
-            <img src="Fashion.png" />
+            <img src="images/Fashion.png" />
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
@@ -159,7 +159,7 @@
           </div>
 
           <div class="item">
-            <img src="son3.png" />
+            <img src="images/son3.png" />
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
@@ -168,7 +168,7 @@
           </div>
 
           <div class="item">
-            <img src="song4.png" />
+            <img src="images/song4.png" />
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
@@ -177,7 +177,7 @@
           </div>
 
           <div class="item">
-            <img src="song5.png" />
+            <img src="images/song5.png" />
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
@@ -191,7 +191,7 @@
         <h2>Your favourite artist</h2>
         <div class="list">
           <div class="item">
-            <img src="ngh.jpeg" style="border-radius: 50%"/>
+            <img src="images/ngh.jpeg" style="border-radius: 50%"/>
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
@@ -200,7 +200,7 @@
           </div>
 
           <div class="item">
-            <img src="tay.jpeg" style="border-radius: 50%"/>
+            <img src="images/tay.jpeg" style="border-radius: 50%"/>
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
@@ -209,7 +209,7 @@
           </div>
 
           <div class="item">
-            <img src="pastel.jpeg" style="border-radius: 50%"/>
+            <img src="images/pastel.jpeg" style="border-radius: 50%"/>
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
@@ -218,7 +218,7 @@
           </div>
 
           <div class="item">
-            <img src="flawed.jpg" style="border-radius: 50%"/>
+            <img src="images/flawed.jpg" style="border-radius: 50%"/>
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
@@ -227,7 +227,7 @@
           </div>
 
           <div class="item">
-            <img src="deftones.jpeg" style="border-radius: 50%"/>
+            <img src="images/deftones.jpeg" style="border-radius: 50%"/>
             <div class="play">
               <span class="fa fa-play"></span>
             </div>
